@@ -1,3 +1,9 @@
+2007-10-09  Steffen Macke <sdteffen@sdteffen.de>
+
+	* doc/en/dcwaterdesign.xml: Updated email address, removed duplicated
+	About section
+	* AUTHORS: Added authors information
+	
 2007-09-18  Maher Abdel Karim <Maher_karim@dorsch.com.jo>
 	
 	* dcwatdes.view.digitizepipe:add smaller diameters
